[M0-9] Remove dead legacy scripts; refresh scripts/README (#49)
+ scripts/setup_gpu_venv.sh, scripts/pycuda.sh — Jetson/CUDA venv scaffolding,
  premature (M4 at earliest) and referenced by nothing but their own README.
+ ml-pipeline/scripts/run_etl.sh — a bare `cd etl && sbt run` one-liner; the etl
  project has several mains, so it never worked, and no target invokes it.

Note: Issue #49 also listed scripts/run-sbt.sh and scripts/run-server.sh for
removal, but both are now active infrastructure — run-sbt.sh is the Makefile's
SBT_RUNNER and run-server.sh launches agda-mcp for .mcp.json — so they are kept.

scripts/README described only the two removed GPU scripts; rewrite it to document
what actually remains (run-sbt.sh, run-server.sh, and the scripts/python tooling).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0119n8jRcVMKpfjNuuJ5qCBG